Fixed desktop layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,96 +1,4 @@
-/* ************ site loader1 **************** */
 
-
-/* ************ site loader **************** */
-/* .is-loaded.is-site-loader-off .site-loader {
-  display: none !important;
-}
-
-.is-loaded.is-site-loader-off .section:not(.is-active) {
-  opacity: 0;
-  visibility: hidden;
-}
-
-.is-loaded.is-site-loader-off .section.is-active {
-  opacity: 1;
-  visibility: visible;
-}
-
-
-.site-loader {
-  z-index: 9999;
-  background-color: #16161b;
-}
-
-.site-loader-spinner {
-  border: 10px solid #3998f9;
-  -webkit-animation: site-loader-spinner 0.75s infinite linear;
-       -o-animation: site-loader-spinner 0.75s infinite linear;
-          animation: site-loader-spinner 0.75s infinite linear;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 80px;
-  height: 80px;
-  margin-top: -40px;
-  margin-left: -40px;
-  border-right-color: transparent;
-  -webkit-border-radius: 50%;
-          border-radius: 50%;
-}
-
-@-webkit-keyframes site-loader-spinner {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-@-o-keyframes site-loader-spinner {
-  0% {
-    -o-transform: rotate(0deg);
-       transform: rotate(0deg);
-  }
-  100% {
-    -o-transform: rotate(360deg);
-       transform: rotate(360deg);
-  }
-}
-
-@keyframes site-loader-spinner {
-  0% {
-    -webkit-transform: rotate(0deg);
-         -o-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-         -o-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-.site-loader p {
-  /* loader text */
-  /* position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 120px;
-  height: 120px;
-  line-height: 120px;
-  margin: -60px 0 0 -60px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
-  font-weight: bold;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  opacity: .75;
-} */
 /* *************** Site loader viewer **************** */
 
 .preloader {
@@ -238,10 +146,17 @@ h2 {
  .navbar {
    display:flex!important;
    background-color: #0E193F!important;
-   height:12vh;
  }
 }
 
+/* ************* selections ************* */
+
+.container-fluid{
+  padding-right: 0px!important;
+  padding-left: 0px!important;
+  margin-left: 0px!important;
+  margin-right: 0px!important;
+}
 /* ************* selections ************* */
 .selection_row {
   height:6vh;
@@ -414,10 +329,11 @@ margin-top: 4px;
 }
 
 /* ********************* Layout *********************** */
-.chart_section {
-  height:80vh;
-}
 
+.row {
+  margin-right: 0px!important;
+  margin-left: 0px!important;
+}
 .row_bar_chart {
   height: 45vh;
   display: flex;
@@ -429,10 +345,14 @@ margin-top: 4px;
 
 .dropdown_row {
   padding-bottom: 0px;
+  /* margin-right: 15px!important;
+  margin-left: 15px!important; */
 }
 .chart_row {
   height:85vh;
   margin-top: 2vh;
+  padding-left: 15px!important;
+  padding-right:15px!important;
 }
 .row_chart {
   height: 20vh;
@@ -467,20 +387,11 @@ margin-top: 4px;
   border: red solid 2px ;
 }
 
-.container-fluid {
-	padding-left: 0px!important;
-  padding-right: 0px!important;
 
-}
-
-.chart-container {
-  padding-left: 15px!important;
-  padding-right: 15px!important;
-}
 .footer {
 	background-color: #0E193F;
 	height:4vh;
-	width:110vw;
+  width:100vw;
 }
 /* .overlay {
   fill: none;
